style.css
@import url("https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,400;1,700&family=Roboto:wght@100;700&family=Open+Sans:wght@300&display=swap");

* {
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  box-sizing: border-box;
  text-decoration: none;
  font-family: "Roboto", sans-serif;
}

body {
  font-size: 100%;
  background: #e8e4d9;
}

body,
ul {
  margin: 0px;
  padding: 0px;
}

#header {
  background-color: #8ebdb6;
  box-sizing: border-box;
  height: 90px;
  padding: 1rem;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-around;
  padding: 12px;
  overflow-y: hidden;

}



.cabecalho-logo {
  height: 15vh;

}

#nav {
  display: flex;
  gap: 32px;
}

#menu {
  display: flex;
  list-style: none;
  gap: 0.5rem;
}

#btn-mobile {
  display: none;
}

#menu a{
  font-family: "Alegreya Sans", sans-serif;
  color: white;
  font-size: 24px;
  
  display: block;
  padding: 2rem;
}

.conteudo {
  /* margin-bottom: 48px; */
  /* border-top: 0.4px solid #a056c9; */
}

.conteudo-principal {
  
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  width: 100vw;
  height: 75vh;
  gap: 100px;
  font-family: "Alegreya Sans", sans-serif;
}

.conteudo-principal-imagem {
  height: 90%;
  width: 500;
  border-radius: 40px;
  
}

.conteudo-principal-escrito {
  font-family: "Roboto", sans-serif;
  font-size: 35px;
  font-weight: 100px;
  text-align: center;
  color: #063940;
  padding-right: 10%;
}

.conteudo-principal-escrito-subtitulo {
  font-family: 'Open Sans', sans-serif;
  color: #3e838c;
  font-size: 35px;
  padding-bottom: 15px;
  padding-top: 10px;
}

button {
}

.conteudo-principal-escrito-botao {
  background-color: #195e63;
  border: none;
  color: white;
  padding: 20px 80px;
  border-radius: 15px;
  /* width: 350px; */
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 25px;
  margin: 4px 2px;
  cursor: pointer;
  -webkit-transition-duration: 0.4s; /* Safari */
  transition-duration: 0.4s;
}

.conteudo-principal-escrito-botao:hover {
  box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24),
    0 17px 50px 0 rgba(0, 0, 0, 0.19);
}

.texto-botao {
  color: white;
}

.conteudo-secundario {
  background-color: #3e838c;
  height: 600px;
  margin: 0px 20px;
  /* margin-left: 10px;
  margin-right: 10px; */
  border-radius: 20px;
}

.conteudo-secundario-titulo {
  font-family: "Alegreya Sans", sans-serif;
  color: #ece1c3;
  font-size: 30px;
  text-align: center;
  padding-top: 60px;
  padding-bottom: 10px;
}

.conteudo-secundario-titulo-subtitulo {
  font-family: "Alegreya Sans", sans-serif;
  color: #ece1c3;
  font-size: 50px;
  text-align: center;
  font-weight: 30px;
}

.conteudo-secundario-icones {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  padding-top: 80px;
}

.alzheimer {
  /* padding-right: 100px; */
}

.parkinson {
  padding-left: 250px;
}

.enxaqueca {
  padding-left: 250px;
}

.icone-titulo {
  font-family: "Alegreya Sans", sans-serif;
  color: #ece1c3;
  font-size: 30px;
  /* align-items: center; */
  text-align: center;
  padding-top: 10px;
}

.conteudo-agendar {
  
  height: 200px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.conteudo-agendar-texto {
  font-family: "Alegreya Sans", sans-serif;
  color: #195e63;
  font-size: 30px;
  text-align: center;
  padding-bottom: 10px;
}

.conteudo-sobre {
  background-color: #8ebdb6;
  border-radius: 50px;
  margin: 0 20px;
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  height: 600px;
}

.conteudo-sobre-texto {
  padding-right: 80px;
}

.conteudo-sobre-titulo {
  text-transform: uppercase;
  font-family: "Alegreya Sans", sans-serif;
  color: black;
  font-size: 25px;
}

.conteudo-sobre-nome {
  font-family: "Alegreya Sans", sans-serif;
  color: #ece1c3;
  font-size: 60px;
}

.conteudo-sobre-subitulo {
  font-family: "Alegreya Sans", sans-serif;
  color: black;
  font-size: 25px;
  padding-bottom: 20px;
}

.conteudo-sobre-lista {
  padding-left: 30px;
}

.conteudo-lista {
  font-family: "Alegreya Sans", sans-serif;
  color: black;
  font-size: 24px;
  padding-bottom: 7px;
}

.conteudo-sobre-imagem {
  height: 80%;
  border-radius: 40px;
}

.rodape {}

.conteudo-rodape {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  padding-top: 5px;
  padding-bottom: 15px;
}

.rodape-logo {
  height: 170px;
  width: 170px;
  /* padding-left: 20vw; */
  /*  */
}

.text-footer {
  display: flex;
  flex-direction: column;
  text-justify: auto;
  padding-left: 7vw;
  font-family: "Alegreya Sans", sans-serif;
  color: black;
  font-size: 24px;
}

.copyright {
  background-color: #063940;

  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  padding-bottom: 20px;
  padding-top: 20px;
}

.copyright-text {
  font-size: 20px;
  color: white;
}

.link-mateus {
  color: #fffff0;
}

@media screen and (max-width: 600px) {
  
  *{
    overflow-x: hidden;

  }

  #btn-mobile {
    display: block;
  }

  #menu {
    display: block;
    position: absolute;
    width: 100%;
    top: 90px;
    right: 0px;
    background: #3e838c;
   height: 0px ;
   transition: .6s;
   visibility: hidden;
   overflow-y: hidden;
    z-index: 1000;
    
  }

  #nav.active #menu{
    height: calc(100vh - 90px); 
    visibility: visible;
   overflow-y: auto;
  }

  #menu a {
    padding: 1rem 0;
    margin: 0 1rem;
    border-bottom: 2px solid whitesmoke;
    color: white;
  }

  #btn-mobile{
    display: flex;
    padding: .5rem 1rem;
    font-size: 1rem;
    border: none;
    background: none;
    cursor: pointer;
    gap: .5rem;
  }

 #hamburguer{
  color: #ece1c3;
  border-top: 2px solid;
  width: 20px;
  overflow-y: hidden;

 }

 #hamburguer::after, #hamburguer::before{
  content: '';
  display: block;
  width: 20px;
  height: 2px;
  background: currentColor;
  margin-top: 5px;
  transition: .3s;
  position: relative;
 }
  
 #nav.active #hamburguer{
  border-top-color:  transparent;
 }

 #nav.active #hamburguer::before{
  transform: rotate(135deg);
 }

 #nav.active #hamburguer::after{
  transform: rotate(-135deg);
  top: -7px;
 }

 .conteudo-principal{
  flex-direction: column;
  align-items: center;
  justify-content: none;
  height: 80vh;
  gap: 20px;
 }

 .conteudo-principal-imagem{
  height: 60%;
  width: 80%;
  padding-left: 0;
 }

 .conteudo-principal-escrito{
  font-size: 20px;

  padding-right: 0;
 }

 .conteudo-secundario {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 0px 0px;
  border-radius: 2px;
  gap: 20px;
  height: 90vh;
}

.conteudo-secundario-titulo{
  padding-top: 30px;
  font-size: 20px;
}

.conteudo-secundario-titulo-subtitulo{
  /* padding-bottom: 15px; */
  font-size: 30px;
}

  .conteudo-secundario-icones {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    
    padding-top: 20px;
  }

  .alzheimer{
    padding-bottom: 30px;
  }

  .parkinson {
    padding-left: 0;
    padding-bottom: 30px;

    
  }
  
  .enxaqueca {
    padding-left: 0;

  }

  .icone-titulo{
    font-size: 25px;
  }

  .conteudo-sobre {
    height: 100vh;
    border-radius: 5px;
  margin: 0 0px;
    display: flex;
    flex-direction: column-reverse;
    justify-content: center;
  }

  .conteudo-sobre-imagem {
    height: 48%;
    padding-bottom: 30px;
    width: 90vw;
  }

  .conteudo-sobre-texto {
    padding-right: 0px;
    /* text-align: center; */
  }

  .conteudo-sobre-titulo{
    
  }

  .conteudo-sobre-subitulo{
    font-size: 20px;
  }

  .conteudo-sobre-nome{
    font-size: 40px;
  }

  .conteudo-sobre-lista {
    /* padding-left: 0; */

  }

  .conteudo-lista{
    list-style: disc;
    font-size: 20px;
    /* padding-bottom: 0px; */
  }

 .rodape{
  height: 30vh;
 }

  .conteudo-rodape {
   
    flex-direction: column;
    align-items: center;
}

.rodape-logo {
  height: 130px;
  max-width: 200px;
  padding-top: 0px;
  padding-left: 0;
  padding-right: 0;
  padding-bottom: 0px;
}

.text-footer{
  font-size: 18px;
  align-items: center;
}

.copyright{
  
}

.copyright-text{
  font-size: 16px;
  text-align: center;
}

}

